# pebbling-club

./: .dockerignore  .editorconfig  .env.sample  .eslintrc.js  .gitignore  LICENSE.txt  Makefile  Procfile-dev  README.md  djlint.toml  fly.toml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_makefile_uv.sh  test_script.sh  tsconfig.json  uv_basic_check.sh  watch.json
.github/workflows/: ci.yml  docker.yml  fly-deploy.yml  release.yml
apps/bookmarks/: apps.py  models.py  views.py
apps/home/: views.py
apps/profiles/: models.py  signals.py
apps/users/: urls.py
client/web/: build.ts  tsconfig.json
common/svg/: feed.ts
deploy/: README.md  deploy-health-check.sh  in-place-post-receive  post-receive  production-docker-compose.override.yml  rollback.sh  setup-deploy.sh  simple-post-receive  simple-setup.md  update-script.sh
docker/basic/: Dockerfile  Procfile  README.md  build.sh  nginx.conf  start.sh
docker/compose/: .env.docker  .env.example  Dockerfile  Dockerfile.nginx  Dockerfile.web  docker-compose.yml  init-postgres.sh  migrate-postgres-volume.sh  nginx-entrypoint.sh  nginx.conf  post-receive
docker/flyio-litefs/: Dockerfile  Procfile  README.md  fly.toml  litefs.yml
docker/flyio-single-node/: Dockerfile  README.md  fly.toml
docker/local-dev/: Dockerfile.nginx  Procfile  Procfile-hybrid  README.md  dev-hybrid.sh  docker-compose.yml  env-example  nginx.conf
docker/single/: .env.docker  Dockerfile  nginx.conf
frontend/: build.ts  package.json  tsconfig.json
frontend/src/: index.css  index.ts
pebbling/: Procfile-dev  admin.py  apps.py  asgi.py  celery.py  db_signals.py  models.py  routers.py  settings.py  urls.py  wsgi.py
pebbling/config/: admin.py  celery.py  urls.py
pebbling/core/: asgi.py  celery.py  routers.py  urls.py
pebbling/settings/: __init__.py  base.py  dev.py  docker.py  prod.py  single.py  utils.py
pebbling/templates/: base.html
pebbling_apps/bookmarks/: admin.py  apps.py  context_processors.py  exporters.py  forms.py  metrics.py  models.py  serializers.py  services.py  streaming.py  tasks.py  urls.py  views.py
pebbling_apps/common/: apps.py  context_processors.py  db_signals.py  metrics_config.py  models.py  utils.py  views.py
public/: index.css  index.js
scripts/: backup-sqlite-to-s3.sh
server/: base.ts  baseCli.ts  index.ts  tsconfig.json  types.d.ts
server/cli/: db.ts  (+7 more)
src/: app.ts  cli.ts  config.ts  events.ts  index.ts  logging.ts
(+487 files in other folders)
