[project]
name = "pebbling-club"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aider-install==0.1.3",
    "amqp==5.3.1",
    "asgiref==3.8.1",
    "autoflake==2.3.1",
    "beautifulsoup4==4.13.3",
    "billiard==4.2.1",
    "black==25.1.0",
    "celery==5.4.0",
    "celery-sqlalchemy-scheduler==0.3.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "cron-descriptor==1.4.5",
    "cssbeautifier==1.15.2",
    "dj-database-url==2.1.0",
    "django==5.1.6",
    "django-appconf==1.1.0",
    "django-celery-beat==2.7.0",
    "django-celery-results==2.5.1",
    "django-environ==0.12.0",
    "django-redis==5.4.0",
    "django-select2==8.3.0",
    "django-timezone-field==7.1",
    "djlint==1.36.4",
    "durations-nlp==1.0.1",
    "editorconfig==0.17.0",
    "extruct==0.18.0",
    "feedparser==6.0.11",
    "greenlet==3.1.1",
    "gunicorn==23.0.0",
    "honcho==2.0.0",
    "html-text==0.7.0",
    "html5lib==1.1",
    "idna==3.10",
    "jsbeautifier==1.15.2",
    "json5==0.10.0",
    "jstyleson==0.0.2",
    "kombu==5.4.2",
    "lxml==5.3.1",
    "lxml-html-clean==0.4.1",
    "mf2py==2.0.1",
    "mock==5.1.0",
    "mypy==1.15.0",
    "mypy-extensions==1.0.0",
    "packaging==24.2",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "prompt-toolkit==3.0.50",
    "pyflakes==3.2.0",
    "pyparsing==3.2.1",
    "psycopg2-binary==2.9.10",
    "pyrdfa3==3.6.4",
    "python-crontab==3.2.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "rdflib==7.1.3",
    "redis==5.0.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "sgmllib3k==1.0.0",
    "six==1.17.0",
    "soupsieve==2.6",
    "sqlalchemy==2.0.38",
    "sqlparse==0.5.3",
    "tqdm==4.67.1",
    "types-mock==5.2.0.20250306",
    "types-pytz==2025.1.0.20250318",
    "types-requests==2.32.0.20250306",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "uv==0.6.2",
    "vine==5.1.0",
    "w3lib==2.3.1",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "whitenoise==6.9.0",
    "flower>=2.0.1",
    "django-debug-toolbar>=5.1.0",
    "django-prometheus==2.3.1",
]
